--- a/Contact Me.html
+++ b/Contact Me.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h1> My Contact Details </h1>
-    <p> 204 Winnipeg </p>
+    <p> 204 Wpg </p>
     <p> test@testerson.ca </p>
     <p> 204-111-1111 </p>
 
     <form class="''" action="mailto:test@test.ca" method="post">
-      <label for=""> Ace </label>
+      <label for=""> Cookie B </label>
       <input type="text" name="" value="">
       <input type="submit" name="">
 
