--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><img src="https://e7.pngegg.com/pngimages/12/511/png-clipart-rainn-wilson-the-office-dwight-schrute-the-bassoon-king-actor-actor-celebrities-face-thumbnail.png" alt="not available">
         </td>
         <td><h1>Cookie B</h1>
-        <p><em>Just a <a href="https://www.facebook.com/ace.dcg/">Homebody</a> </em></p>
+        <p><em>Just a <a href="https://www.facebook.com/dwight.schrute.5836">Homebody</a> </em></p>
         <p>I am blah blah </p>
       </td>
       </tr>
